# unitfiedui-ra-act-agent-service

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPONSORS.md  TOOLING.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/instructions/: coding-standards.md  project-structure.md  security.md  testing-guide.md
.github/workflows/: auto-labeler.yml  cd-release.yml  ci-pr-branch-check.yml  ci-tests-and-lint.yml  codeql.yml  dependency-review.yml  pr-size-labeler.yml  release-drafter.yml  stale.yml
app/: __init__.py  config.py  main.py
app/api/v1/: agent.py  health.py
app/core/vault/: __init__.py  azure_keyvault.py  base.py  dependencies.py  dotenv_vault.py  factory.py  hashicorp_vault.py
app/middleware/: __init__.py  service_auth.py
app/models/: __init__.py  requests.py  responses.py
app/services/: agent_executor.py  llm_factory.py
docker/: Dockerfile
docs/: README.md
docs/adr/: 001_SERVICE_AUTHENTICATION.md  002_VAULT_ABSTRACTION.md  003_LLM_PROVIDER_FACTORY.md  004_SSE_STREAMING_PROTOCOL.md  README.md
tests/: __init__.py  conftest.py  test_agent_executor.py  test_auth.py  test_config.py  test_health.py  test_llm_factory.py  test_models.py  test_vault.py
